--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" 
         android:name="BeaconReferenceApplication">
+        <!-- Start the activity when beacon detected. Note: the singleInstance below is important to keep two copies of your activity from getting launched on automatic startup -->
         <activity
+            android:launchMode="singleInstance"
             android:name="org.altbeacon.beaconreference.MonitoringActivity"
             android:label="@string/app_name" >
             <intent-filter>
